--- a/servercolumns-powercordfix.theme.css
+++ b/servercolumns-powercordfix.theme.css
@@ -1,5 +1,8 @@
-/* Original theme contents here */
+
+/*
+Instead of importing the original theme, I've just copied it all into here.
 @import url("https://mwittrien.github.io/BetterDiscordAddons/Themes/ServerColumns/ServerColumns.css");
+*/
 
 :root {
     --columns:    3; /* default:  3   (amount of servercolumns) */
@@ -8,23 +11,257 @@
     --guildgap:   3; /* default:  3   (top/bottom gap between servers in pixel) */
     
     --aligndms:   1; /* default:  0   (should DMs be aligned in columns: 0 = no, 1 = yes) */
+    /* 0 just looks better, so I'm setting it to that lol */
+}
+
+:root {
+    --vcolumns: var(--columns, 3);
+    --vguildsize: var(--guildsize, 50);
+    --vguildgap: var(--guildgap, 3);
+    --valigndms: var(--aligndms, 1);
+}
+
+.container-2lgZY8 {
+    display: flex !important;
+}
+.wrapper-1Rf91z {
+    position: static !important;
+    contain: unset !important;
+}
+.base-3dtUhz {
+    position: static !important;
+    contain: unset !important;
+    width: 100% !important;
+}
+.titleBar-AC4pGV.typeMacOS-3EmCyP,
+.titleBar-AC4pGV.typeMacOS-3EmCyP .macButtons-2MuSAC,
+.wrapper-1Rf91z,
+.wrapper-1Rf91z .unreadMentionsIndicatorTop-gA6RCh,
+.wrapper-1Rf91z .unreadMentionsIndicatorBottom-BXS58x {
+    width: calc(1px * (var(--vguildsize) * var(--vcolumns) + 20 * (var(--vguildsize)/50) + 14 * (var(--vguildsize)/50) * (var(--vcolumns) - 1))) !important;
+}
+.titleBar-AC4pGV.typeMacOS-3EmCyP .macButtons-2MuSAC {
+    padding-right: calc(1px * ((var(--vguildsize) + 12 * var(--vguildsize)/50) * var(--vcolumns) - 50)) !important;
+}
+body.foldercontentopened .titleBar-AC4pGV.typeMacOS-3EmCyP,
+body.foldercontentopened .titleBar-AC4pGV.typeMacOS-3EmCyP .macButtons-2MuSAC {
+    width: calc(2px * ((var(--vguildsize) + 12 * var(--vguildsize)/50) * var(--vcolumns) + 35 - 25)) !important;
+}
+body.foldercontentopened .titleBar-AC4pGV.typeMacOS-3EmCyP .macButtons-2MuSAC {
+    padding-right: calc(1px * ((var(--vguildsize) + 12 * var(--vguildsize)/50) * var(--vcolumns) * 2 - 40)) !important;
+}
+.titleBar-AC4pGV.typeMacOS-3EmCyP.typeMacOSWithFrame-3R_i5S .macButtons-2MuSAC {
+    margin-top: 0 !important;
+    margin-right: 0 !important;
+}
+.wrapper-1Rf91z {
+    padding: 0 !important;
+}
+.wrapper-1Rf91z .scroller-2TZvBN {
+    padding: 0 0 calc(10px * var(--vguildsize)/50) calc(10px * var(--vguildsize)/50) !important;
+}
+.wrapper-1Rf91z .scroller-2TZvBN.none-2Eo-qx::-webkit-scrollbar {
+    width: 0 !important;
+}
+.wrapper-1Rf91z .scroller-2TZvBN,
+.wrapper-1Rf91z .scroller-2TZvBN > [role="tree"],
+.wrapper-1Rf91z .listItem-2P_4kh + div[aria-label]:not([class]),
+.BF-folderSidebar div[aria-label=Servers] { /* Fix for Better Folders (by solonovamax#6983 */
+    margin: 0 !important;
+    display: flex !important;
+    flex-flow: row wrap !important;
+    align-content: flex-start !important;
+}
+.wrapper-1Rf91z .listItem-2P_4kh {
+    margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
+}
+.wrapper-1Rf91z #server-search {
+    margin: calc(1px * var(--vguildgap)) calc(1px * (((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2)) !important;
+}
+.wrapper-1Rf91z #server-search .pill-3YxEhL {
+    display: none;
+}
+.wrapper-1Rf91z .listItem-2P_4kh:first-child .listItemWrapper-3X98Pc {
+    margin: 0 calc(1px * (((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2)) calc(1px * var(--vguildgap)) calc(1px * ((((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2))) !important;
+}
+.wrapper-1Rf91z .listItem-2P_4kh:first-child .pill-1m5BUr ~ .listItemWrapper-3X98Pc {
+    margin: 0 calc(1px * ((((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2) * (1 - var(--valigndms)))) 0 calc(1px * (((0 * var(--valigndms)) + ((((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2) * (1 - var(--valigndms)))))) !important;
+}
+.wrapper-1Rf91z .blobContainer-239gwq,
+.wrapper-1Rf91z .circleButtonMask-2VNJsN,
+.wrapper-1Rf91z .guildsError-b7zR5H {
+    margin: 0 !important;
+}
+.wrapper-1Rf91z .listItem-2P_4kh {
+    width: auto !important;
+}
+.wrapper-1Rf91z .placeholderMask-3K9THS,
+.wrapper-1Rf91z .svg-1X37T1,
+.wrapper-1Rf91z .wrapper-25eVIn {
+    height: calc(1px * var(--vguildsize)) !important;
+    width: calc(1px * var(--vguildsize)) !important;
+}
+.wrapper-1Rf91z .homeIcon-tEMBK1 {
+    height: calc(1px * (var(--vguildsize) * (8/50) + 12)) !important;
+    width: calc(1px * (var(--vguildsize) * (16/50) + 12)) !important;
+}
+.wrapper-1Rf91z .scroller-2TZvBN > div[style*="height"]:not([class]) {
+    height: calc(1px * var(--vguildsize) * (58/50)) !important;
+}
+.wrapper-1Rf91z .upperBadge-2XnnGB .base-PmTxvP {
+    transform: translate(calc(1.5px * ((50 - var(--vguildsize))/10)), calc(-1.5px * ((50 - var(--vguildsize))/10))) scale(calc(var(--vguildsize)/50)) !important;
+}
+.wrapper-1Rf91z .upperLeftBadge-e35IpL .base-PmTxvP {
+    transform: translate(calc(-1.5px * ((50 - var(--vguildsize))/10)), calc(-1.5px * ((50 - var(--vguildsize))/10))) scale(calc(var(--vguildsize)/50)) !important;
+}
+.wrapper-1Rf91z .lowerBadge-29hYVK .base-PmTxvP {
+    transform: translate(calc(1.5px * ((50 - var(--vguildsize))/10)), calc(1.5px * ((50 - var(--vguildsize))/10))) scale(calc(var(--vguildsize)/50)) !important;
+}
+.wrapper-1Rf91z .lowerLeftBadge-zr4T_9 .base-PmTxvP {
+    transform: translate(calc(-1.5px * ((50 - var(--vguildsize))/10)), calc(1.5px * ((50 - var(--vguildsize))/10))) scale(calc(var(--vguildsize)/50)) !important;
+}
+.wrapper-1Rf91z .wrapper-sa6paO {
+    top: calc(-5px * var(--vguildsize)/50) !important;
+    height: calc(1px * (var(--vguildsize) + 10 * var(--vguildsize)/50)) !important;
+    transform: scale(calc(var(--vguildsize)/50)) !important;
+    transform-origin: 0 50% !important;
+}
+.wrapper-1Rf91z .pill-2uzAFe {
+    left: calc(1px * ((((var(--vguildsize) + 10 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2) - 9)) !important;
+}
+.wrapper-1Rf91z .pill-1m5BUr {
+    left: calc(1px * ((var(--valigndms) + ((((var(--vguildsize) + 10 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2) * (1 - var(--valigndms)))) - 8)) !important;
+}
+.wrapper-1Rf91z .pill-31IEus,
+.wrapper-1Rf91z .pill-3YxEhL {
+    left: calc(-10px * var(--vguildsize)/50) !important;
+}
+.wrapper-1Rf91z .guildSeparator-3s64Iy {
+    width: calc(1px * ((var(--vguildsize) + 12 * var(--vguildsize)/50) * var(--vcolumns) - (12 * var(--vguildsize)/50))) !important;
+    margin: calc(1px * (var(--vguildsize)/10)) 0 !important;
+    display: block !important;
+}
+.wrapper-1Rf91z [role=tree] ~ .listItem-2P_4kh .listItemWrapper-3X98Pc,
+.wrapper-1Rf91z [role=tree] ~ * .listItem-2P_4kh .listItemWrapper-3X98Pc,
+.wrapper-1Rf91z .listItem-2P_4kh + div[aria-label]:not([class]) ~ .listItem-2P_4kh .listItemWrapper-3X98Pc,
+.wrapper-1Rf91z .listItem-2P_4kh + div[aria-label]:not([class]) ~ * .listItem-2P_4kh .listItemWrapper-3X98Pc,
+.BF-folderSidebar div[aria-label=Servers] ~ .listItem-2P_4kh .listItemWrapper-3X98Pc, /* Fix for Better Folders (by solonovamax#6983) */
+.BF-folderSidebar div[aria-label=Servers] ~ * .listItem-2P_4kh .listItemWrapper-3X98Pc {
+    margin: 0 !important;
+}
+.wrapper-1Rf91z .guildsError-b7zR5H {
+    height: calc(1px * var(--vguildsize)) !important;
+    width: calc(1px * var(--vguildsize)) !important;
+    font-size: calc(1px * (var(--vguildsize)/4 + 7.5)) !important;
+    line-height: calc(1px * (var(--vguildsize)/4 + 6.5)) !important;
+}
+.wrapper-1Rf91z #bd-pub-li,
+.wrapper-1Rf91z #bd-pub-li #bd-pub-button,
+.wrapper-1Rf91z #sort-button,
+.wrapper-1Rf91z #sort-button > div,
+.wrapper-1Rf91z .frame-oXWS21,
+.wrapper-1Rf91z .frame-oXWS21 .button-Jt-tIg {
+    height: calc(1px * ((var(--vguildsize)/5) + 10)) !important;
+}
+.wrapper-1Rf91z .friendsOnline-2JkivW,
+.wrapper-1Rf91z .label-2wRs_g {
+    font-size: calc(1px * ((var(--vguildsize)/8) + 3.75)) !important;
+}
+.wrapper-1Rf91z .friendsOnline-2JkivW,
+.wrapper-1Rf91z .label-2wRs_g,
+.wrapper-1Rf91z #bd-pub-li,
+.wrapper-1Rf91z #sort-button,
+.wrapper-1Rf91z .frame-oXWS21 {
+    width: calc(1px * ((var(--vguildsize)*4/5) + 12 * var(--vguildsize)/50)) !important;
+}
+.wrapper-1Rf91z .friendsOnline-2JkivW,
+.wrapper-1Rf91z .label-2wRs_g,
+.wrapper-1Rf91z #bd-pub-li,
+.wrapper-1Rf91z #sort-button,
+.wrapper-1Rf91z .frame-oXWS21 {
+    text-align: center !important;
+    margin: calc(1px * var(--vguildgap)) calc(1px * (((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1) - ((var(--vguildsize)*4/5) + 12 * var(--vguildsize)/50) + var(--vguildsize))/2)) calc(1px * var(--vguildgap)) calc(1px * (((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1) - ((var(--vguildsize)*4/5) + 12 * var(--vguildsize)/50) + var(--vguildsize))/2)) !important;
+}
+.wrapper-1Rf91z #sort-button > div,
+.wrapper-1Rf91z #bd-pub-li #bd-pub-button,
+.wrapper-1Rf91z .frame-oXWS21 .innerFrame-8Hg64E,
+.wrapper-1Rf91z .frame-oXWS21 .button-Jt-tIg {
+    white-space: pre !important;
+    font-size: calc(1px * ((var(--vguildsize)/8) + 5)) !important;
+    line-height: calc(1px * ((var(--vguildsize)/5) + 10)) !important;
+}
+.wrapper-1Rf91z #sort-button > div,
+.wrapper-1Rf91z #bd-pub-li #bd-pub-button,
+.wrapper-1Rf91z .frame-oXWS21 .innerFrame-8Hg64E,
+.wrapper-1Rf91z .frame-oXWS21 .button-Jt-tIg {
+    width: 100% !important;
+}
+
+.wrapper-1Rf91z .wrapper-21YSNc {
+    margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
+    width: calc(1px * var(--vguildsize)) !important;
+}
+.wrapper-1Rf91z .wrapper-21YSNc > .listItem-2P_4kh {
+    margin: 0 !important;
+}
+.wrapper-1Rf91z .wrapper-21YSNc [role="group"] {
+    overflow: visible !important;
+    margin-left: -1px !important;
+    margin-bottom: -8px !important;
+    padding-left: 1px !important;
+}
+.wrapper-1Rf91z .wrapper-21YSNc [role="group"] .listItem-2P_4kh {
+    margin: 6px 0 !important;
+}
+.wrapper-1Rf91z .wrapper-21YSNc [role="group"] .listItem-2P_4kh:last-child {
+    margin-bottom: 0 !important;
+}
+.wrapper-1Rf91z .expandedFolderBackground-2sPsd- {
+    width: calc(1px * var(--vguildsize)) !important;
+    top: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    margin-bottom: 8px !important;
+}
+
+html .typingindicator-guild,
+html .typingindicator-dms,
+html .typingindicator-folder {
+    right: 3px !important;
+    top: calc(var(--vguildsize) * 1px - 5px) !important;
+    bottom: unset !important;
 }
 
 
 /* This stuff is my powercord fix (by Yellowsink#8156) */
+
 .wrapper-1Rf91z .wrapper-21YSNc [role="group"], .wrapper-1Rf91z .wrapper-21YSNc {
-	display: contents;
+    display: contents;
 }
 
 /* Delete the next 3 lines if you want to try figure out backgrounds */
 .wrapper-1Rf91z .expandedFolderBackground-2sPsd- {
-	display: none;
+    display: none;
 }
 
 .wrapper-1Rf91z .wrapper-21YSNc [role="group"] .listItem-2P_4kh {
-	margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
+    margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
 }
 
 .wrapper-1Rf91z .wrapper-21YSNc > .listItem-2P_4kh {
-	margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
+    margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
+}
+
+/* This is a fix for the Online Friends Count plugin, to make it not look like dog shit. (by solonovamax#6983) */
+
+.onlineFriends-counter {
+    padding: 0 0 0 0 !important;
+    text-align: center !important;
+    width: auto;
+}
+
+.tutorialContainer-1v44GL + .listItem-2P_4kh {
+    flex: 0 0 93% !important; /* magic number go brrrrr */
+    padding: 0 0 0 0 !important;
+    margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important !important;
 }
