--- a/servercolumns-powercordfix.theme.css
+++ b/servercolumns-powercordfix.theme.css
@@ -24,7 +24,7 @@ Instead of importing the original theme, I've just copied it all into here.
 .container-2lgZY8 {
     display: flex !important;
 }
-.wrapper-1Rf91z {
+.wrapper-3NnKdC {
     position: static !important;
     contain: unset !important;
 }
@@ -35,9 +35,9 @@ Instead of importing the original theme, I've just copied it all into here.
 }
 .titleBar-AC4pGV.typeMacOS-3EmCyP,
 .titleBar-AC4pGV.typeMacOS-3EmCyP .macButtons-2MuSAC,
-.wrapper-1Rf91z,
-.wrapper-1Rf91z .unreadMentionsIndicatorTop-gA6RCh,
-.wrapper-1Rf91z .unreadMentionsIndicatorBottom-BXS58x {
+.wrapper-3NnKdC,
+.wrapper-3NnKdC .unreadMentionsIndicatorTop-gA6RCh,
+.wrapper-3NnKdC .unreadMentionsIndicatorBottom-BXS58x {
     width: calc(1px * (var(--vguildsize) * var(--vcolumns) + 20 * (var(--vguildsize)/50) + 14 * (var(--vguildsize)/50) * (var(--vcolumns) - 1))) !important;
 }
 .titleBar-AC4pGV.typeMacOS-3EmCyP .macButtons-2MuSAC {
@@ -54,86 +54,86 @@ body.foldercontentopened .titleBar-AC4pGV.typeMacOS-3EmCyP .macButtons-2MuSAC {
     margin-top: 0 !important;
     margin-right: 0 !important;
 }
-.wrapper-1Rf91z {
+.wrapper-3NnKdC {
     padding: 0 !important;
 }
-.wrapper-1Rf91z .scroller-2TZvBN {
+.wrapper-3NnKdC .scroller-2TZvBN {
     padding: 0 0 calc(10px * var(--vguildsize)/50) calc(10px * var(--vguildsize)/50) !important;
 }
-.wrapper-1Rf91z .scroller-2TZvBN.none-2Eo-qx::-webkit-scrollbar {
+.wrapper-3NnKdC .scroller-2TZvBN.none-2Eo-qx::-webkit-scrollbar {
     width: 0 !important;
 }
-.wrapper-1Rf91z .scroller-2TZvBN,
-.wrapper-1Rf91z .scroller-2TZvBN > [role="tree"],
-.wrapper-1Rf91z .listItem-2P_4kh + div[aria-label]:not([class]),
+.wrapper-3NnKdC .scroller-2TZvBN,
+.wrapper-3NnKdC .scroller-2TZvBN > [role="tree"],
+.wrapper-3NnKdC .listItem-2P_4kh + div[aria-label]:not([class]),
 .BF-folderSidebar div[aria-label=Servers] { /* Fix for Better Folders (by solonovamax#6983 */
     margin: 0 !important;
     display: flex !important;
     flex-flow: row wrap !important;
     align-content: flex-start !important;
 }
-.wrapper-1Rf91z .listItem-2P_4kh {
+.wrapper-3NnKdC .listItem-2P_4kh {
     margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
 }
-.wrapper-1Rf91z #server-search {
+.wrapper-3NnKdC #server-search {
     margin: calc(1px * var(--vguildgap)) calc(1px * (((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2)) !important;
 }
-.wrapper-1Rf91z #server-search .pill-3YxEhL {
+.wrapper-3NnKdC #server-search .pill-3YxEhL {
     display: none;
 }
-.wrapper-1Rf91z .listItem-2P_4kh:first-child .listItemWrapper-3X98Pc {
+.wrapper-3NnKdC .listItem-2P_4kh:first-child .listItemWrapper-3X98Pc {
     margin: 0 calc(1px * (((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2)) calc(1px * var(--vguildgap)) calc(1px * ((((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2))) !important;
 }
-.wrapper-1Rf91z .listItem-2P_4kh:first-child .pill-1m5BUr ~ .listItemWrapper-3X98Pc {
+.wrapper-3NnKdC .listItem-2P_4kh:first-child .pill-1m5BUr ~ .listItemWrapper-3X98Pc {
     margin: 0 calc(1px * ((((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2) * (1 - var(--valigndms)))) 0 calc(1px * (((0 * var(--valigndms)) + ((((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2) * (1 - var(--valigndms)))))) !important;
 }
-.wrapper-1Rf91z .blobContainer-239gwq,
-.wrapper-1Rf91z .circleButtonMask-2VNJsN,
-.wrapper-1Rf91z .guildsError-b7zR5H {
+.wrapper-3NnKdC .blobContainer-239gwq,
+.wrapper-3NnKdC .circleButtonMask-2VNJsN,
+.wrapper-3NnKdC .guildsError-b7zR5H {
     margin: 0 !important;
 }
-.wrapper-1Rf91z .listItem-2P_4kh {
+.wrapper-3NnKdC .listItem-2P_4kh {
     width: auto !important;
 }
-.wrapper-1Rf91z .placeholderMask-3K9THS,
-.wrapper-1Rf91z .svg-1X37T1,
-.wrapper-1Rf91z .wrapper-25eVIn {
+.wrapper-3NnKdC .placeholderMask-3K9THS,
+.wrapper-3NnKdC .svg-1X37T1,
+.wrapper-3NnKdC .wrapper-25eVIn {
     height: calc(1px * var(--vguildsize)) !important;
     width: calc(1px * var(--vguildsize)) !important;
 }
-.wrapper-1Rf91z .homeIcon-tEMBK1 {
+.wrapper-3NnKdC .homeIcon-tEMBK1 {
     height: calc(1px * (var(--vguildsize) * (8/50) + 12)) !important;
     width: calc(1px * (var(--vguildsize) * (16/50) + 12)) !important;
 }
-.wrapper-1Rf91z .scroller-2TZvBN > div[style*="height"]:not([class]) {
+.wrapper-3NnKdC .scroller-2TZvBN > div[style*="height"]:not([class]) {
     height: calc(1px * var(--vguildsize) * (58/50)) !important;
 }
-.wrapper-1Rf91z .upperBadge-2XnnGB .base-PmTxvP {
+.wrapper-3NnKdC .upperBadge-2XnnGB .base-PmTxvP {
     transform: translate(calc(1.5px * ((50 - var(--vguildsize))/10)), calc(-1.5px * ((50 - var(--vguildsize))/10))) scale(calc(var(--vguildsize)/50)) !important;
 }
-.wrapper-1Rf91z .upperLeftBadge-e35IpL .base-PmTxvP {
+.wrapper-3NnKdC .upperLeftBadge-e35IpL .base-PmTxvP {
     transform: translate(calc(-1.5px * ((50 - var(--vguildsize))/10)), calc(-1.5px * ((50 - var(--vguildsize))/10))) scale(calc(var(--vguildsize)/50)) !important;
 }
-.wrapper-1Rf91z .lowerBadge-29hYVK .base-PmTxvP {
+.wrapper-3NnKdC .lowerBadge-29hYVK .base-PmTxvP {
     transform: translate(calc(1.5px * ((50 - var(--vguildsize))/10)), calc(1.5px * ((50 - var(--vguildsize))/10))) scale(calc(var(--vguildsize)/50)) !important;
 }
-.wrapper-1Rf91z .lowerLeftBadge-zr4T_9 .base-PmTxvP {
+.wrapper-3NnKdC .lowerLeftBadge-zr4T_9 .base-PmTxvP {
     transform: translate(calc(-1.5px * ((50 - var(--vguildsize))/10)), calc(1.5px * ((50 - var(--vguildsize))/10))) scale(calc(var(--vguildsize)/50)) !important;
 }
-.wrapper-1Rf91z .wrapper-sa6paO {
+.wrapper-3NnKdC .wrapper-sa6paO {
     top: calc(-5px * var(--vguildsize)/50) !important;
     height: calc(1px * (var(--vguildsize) + 10 * var(--vguildsize)/50)) !important;
     transform: scale(calc(var(--vguildsize)/50)) !important;
     transform-origin: 0 50% !important;
 }
-.wrapper-1Rf91z .pill-2uzAFe {
+.wrapper-3NnKdC .pill-2uzAFe {
     left: calc(1px * ((((var(--vguildsize) + 10 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2) - 9)) !important;
 }
-.wrapper-1Rf91z .pill-1m5BUr {
+.wrapper-3NnKdC .pill-1m5BUr {
     left: calc(1px * ((var(--valigndms) + ((((var(--vguildsize) + 10 * var(--vguildsize)/50) * (var(--vcolumns) - 1))/2) * (1 - var(--valigndms)))) - 8)) !important;
 }
-.wrapper-1Rf91z .pill-31IEus,
-.wrapper-1Rf91z .pill-3YxEhL {
+.wrapper-3NnKdC .pill-31IEus,
+.wrapper-3NnKdC .pill-3YxEhL {
     left: calc(-10px * var(--vguildsize)/50) !important;
 }
 .wrapper-1Rf91z .guildSeparator-3s64Iy {
@@ -141,82 +141,82 @@ body.foldercontentopened .titleBar-AC4pGV.typeMacOS-3EmCyP .macButtons-2MuSAC {
     margin: calc(1px * (var(--vguildsize)/10)) 0 !important;
     display: block !important;
 }
-.wrapper-1Rf91z [role=tree] ~ .listItem-2P_4kh .listItemWrapper-3X98Pc,
-.wrapper-1Rf91z [role=tree] ~ * .listItem-2P_4kh .listItemWrapper-3X98Pc,
-.wrapper-1Rf91z .listItem-2P_4kh + div[aria-label]:not([class]) ~ .listItem-2P_4kh .listItemWrapper-3X98Pc,
-.wrapper-1Rf91z .listItem-2P_4kh + div[aria-label]:not([class]) ~ * .listItem-2P_4kh .listItemWrapper-3X98Pc,
+.wrapper-3NnKdC [role=tree] ~ .listItem-2P_4kh .listItemWrapper-3X98Pc,
+.wrapper-3NnKdC [role=tree] ~ * .listItem-2P_4kh .listItemWrapper-3X98Pc,
+.wrapper-3NnKdC .listItem-2P_4kh + div[aria-label]:not([class]) ~ .listItem-2P_4kh .listItemWrapper-3X98Pc,
+.wrapper-3NnKdC .listItem-2P_4kh + div[aria-label]:not([class]) ~ * .listItem-2P_4kh .listItemWrapper-3X98Pc,
 .BF-folderSidebar div[aria-label=Servers] ~ .listItem-2P_4kh .listItemWrapper-3X98Pc, /* Fix for Better Folders (by solonovamax#6983) */
 .BF-folderSidebar div[aria-label=Servers] ~ * .listItem-2P_4kh .listItemWrapper-3X98Pc {
     margin: 0 !important;
 }
-.wrapper-1Rf91z .guildsError-b7zR5H {
+.wrapper-3NnKdC .guildsError-b7zR5H {
     height: calc(1px * var(--vguildsize)) !important;
     width: calc(1px * var(--vguildsize)) !important;
     font-size: calc(1px * (var(--vguildsize)/4 + 7.5)) !important;
     line-height: calc(1px * (var(--vguildsize)/4 + 6.5)) !important;
 }
-.wrapper-1Rf91z #bd-pub-li,
-.wrapper-1Rf91z #bd-pub-li #bd-pub-button,
-.wrapper-1Rf91z #sort-button,
-.wrapper-1Rf91z #sort-button > div,
-.wrapper-1Rf91z .frame-oXWS21,
-.wrapper-1Rf91z .frame-oXWS21 .button-Jt-tIg {
+.wrapper-3NnKdC #bd-pub-li,
+.wrapper-3NnKdC #bd-pub-li #bd-pub-button,
+.wrapper-3NnKdC #sort-button,
+.wrapper-3NnKdC #sort-button > div,
+.wrapper-3NnKdC .frame-oXWS21,
+.wrapper-3NnKdC .frame-oXWS21 .button-Jt-tIg {
     height: calc(1px * ((var(--vguildsize)/5) + 10)) !important;
 }
-.wrapper-1Rf91z .friendsOnline-2JkivW,
-.wrapper-1Rf91z .label-2wRs_g {
+.wrapper-3NnKdC .friendsOnline-2JkivW,
+.wrapper-3NnKdC .label-2wRs_g {
     font-size: calc(1px * ((var(--vguildsize)/8) + 3.75)) !important;
 }
-.wrapper-1Rf91z .friendsOnline-2JkivW,
-.wrapper-1Rf91z .label-2wRs_g,
-.wrapper-1Rf91z #bd-pub-li,
-.wrapper-1Rf91z #sort-button,
-.wrapper-1Rf91z .frame-oXWS21 {
+.wrapper-3NnKdC .friendsOnline-2JkivW,
+.wrapper-3NnKdC .label-2wRs_g,
+.wrapper-3NnKdC #bd-pub-li,
+.wrapper-3NnKdC #sort-button,
+.wrapper-3NnKdC .frame-oXWS21 {
     width: calc(1px * ((var(--vguildsize)*4/5) + 12 * var(--vguildsize)/50)) !important;
 }
-.wrapper-1Rf91z .friendsOnline-2JkivW,
-.wrapper-1Rf91z .label-2wRs_g,
-.wrapper-1Rf91z #bd-pub-li,
-.wrapper-1Rf91z #sort-button,
-.wrapper-1Rf91z .frame-oXWS21 {
+.wrapper-3NnKdC .friendsOnline-2JkivW,
+.wrapper-3NnKdC .label-2wRs_g,
+.wrapper-3NnKdC #bd-pub-li,
+.wrapper-3NnKdC #sort-button,
+.wrapper-3NnKdC .frame-oXWS21 {
     text-align: center !important;
     margin: calc(1px * var(--vguildgap)) calc(1px * (((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1) - ((var(--vguildsize)*4/5) + 12 * var(--vguildsize)/50) + var(--vguildsize))/2)) calc(1px * var(--vguildgap)) calc(1px * (((var(--vguildsize) + 12 * var(--vguildsize)/50) * (var(--vcolumns) - 1) - ((var(--vguildsize)*4/5) + 12 * var(--vguildsize)/50) + var(--vguildsize))/2)) !important;
 }
-.wrapper-1Rf91z #sort-button > div,
-.wrapper-1Rf91z #bd-pub-li #bd-pub-button,
-.wrapper-1Rf91z .frame-oXWS21 .innerFrame-8Hg64E,
-.wrapper-1Rf91z .frame-oXWS21 .button-Jt-tIg {
+.wrapper-3NnKdC #sort-button > div,
+.wrapper-3NnKdC #bd-pub-li #bd-pub-button,
+.wrapper-3NnKdC .frame-oXWS21 .innerFrame-8Hg64E,
+.wrapper-3NnKdC .frame-oXWS21 .button-Jt-tIg {
     white-space: pre !important;
     font-size: calc(1px * ((var(--vguildsize)/8) + 5)) !important;
     line-height: calc(1px * ((var(--vguildsize)/5) + 10)) !important;
 }
-.wrapper-1Rf91z #sort-button > div,
-.wrapper-1Rf91z #bd-pub-li #bd-pub-button,
-.wrapper-1Rf91z .frame-oXWS21 .innerFrame-8Hg64E,
-.wrapper-1Rf91z .frame-oXWS21 .button-Jt-tIg {
+.wrapper-3NnKdC #sort-button > div,
+.wrapper-3NnKdC #bd-pub-li #bd-pub-button,
+.wrapper-3NnKdC .frame-oXWS21 .innerFrame-8Hg64E,
+.wrapper-3NnKdC .frame-oXWS21 .button-Jt-tIg {
     width: 100% !important;
 }
 
-.wrapper-1Rf91z .wrapper-21YSNc {
+.wrapper-3NnKdC .wrapper-21YSNc {
     margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
     width: calc(1px * var(--vguildsize)) !important;
 }
-.wrapper-1Rf91z .wrapper-21YSNc > .listItem-2P_4kh {
+.wrapper-3NnKdC .wrapper-21YSNc > .listItem-2P_4kh {
     margin: 0 !important;
 }
-.wrapper-1Rf91z .wrapper-21YSNc [role="group"] {
+.wrapper-3NnKdC .wrapper-21YSNc [role="group"] {
     overflow: visible !important;
     margin-left: -1px !important;
     margin-bottom: -8px !important;
     padding-left: 1px !important;
 }
-.wrapper-1Rf91z .wrapper-21YSNc [role="group"] .listItem-2P_4kh {
+.wrapper-3NnKdC .wrapper-21YSNc [role="group"] .listItem-2P_4kh {
     margin: 6px 0 !important;
 }
-.wrapper-1Rf91z .wrapper-21YSNc [role="group"] .listItem-2P_4kh:last-child {
+.wrapper-3NnKdC .wrapper-21YSNc [role="group"] .listItem-2P_4kh:last-child {
     margin-bottom: 0 !important;
 }
-.wrapper-1Rf91z .expandedFolderBackground-2sPsd- {
+.wrapper-3NnKdC .expandedFolderBackground-2sPsd- {
     width: calc(1px * var(--vguildsize)) !important;
     top: 0 !important;
     bottom: 0 !important;
@@ -235,20 +235,20 @@ html .typingindicator-folder {
 
 /* This stuff is my powercord fix (by Yellowsink#8156) */
 
-.wrapper-1Rf91z .wrapper-21YSNc [role="group"], .wrapper-1Rf91z .wrapper-21YSNc {
+.wrapper-3NnKdC .wrapper-21YSNc [role="group"], .wrapper-3NnKdC .wrapper-21YSNc {
     display: contents;
 }
 
 /* Delete the next 3 lines if you want to try figure out backgrounds */
-.wrapper-1Rf91z .expandedFolderBackground-2sPsd- {
+.wrapper-3NnKdC .expandedFolderBackground-2sPsd- {
     display: none;
 }
 
-.wrapper-1Rf91z .wrapper-21YSNc [role="group"] .listItem-2P_4kh {
+.wrapper-3NnKdC .wrapper-21YSNc [role="group"] .listItem-2P_4kh {
     margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
 }
 
-.wrapper-1Rf91z .wrapper-21YSNc > .listItem-2P_4kh {
+.wrapper-3NnKdC .wrapper-21YSNc > .listItem-2P_4kh {
     margin: calc(1px * var(--vguildgap)) calc(1px * (12 * var(--vguildsize)/50)) calc(1px * var(--vguildgap)) 0 !important;
 }
 
