More fixes for online friends list plugin

--- a/servercolumns-powercordfix.theme.css
+++ b/servercolumns-powercordfix.theme.css
@@ -21,9 +21,10 @@ Instead of importing the original theme, I've just copied it all into here.
     --valigndms: var(--aligndms, 1);
 }
 
-.listItem-GuPuDH {
-    justify-content: none !important;
+.guilds-1SWlCJ div[aria-label=Servers] .listItem-GuPuDH {
+    justify-content: unset !important;
 }
+
 
 .container-2lgZY8 {
     display: flex !important;
